# fuzz_ui

./: .gitignore  Cargo.toml  README.md  arch.rs  todo.txt
afl_fast_bin_cov/workdir/: make.sh  test_sleep.c
binary_cfg/: Cargo.toml
binary_cfg/src/: binary_trace.rs  cfg.rs  cofi.rs  disassembler.rs  lib.rs  target.rs
dump_srcmap/: Cargo.toml
dump_srcmap/src/: lib.rs
newtypes/: Cargo.toml
newtypes/src/: config.rs  error.rs  lib.rs  transition_type.rs
python_client/: .gitignore  api.py  watcher.py
qemu_forkserver/: Cargo.toml
qemu_forkserver/src/: lib.rs
qemu_trace_loader/: Cargo.toml
qemu_trace_loader/src/: lib.rs
source_info/: Cargo.toml
source_info/src/: lib.rs  source_info.rs  source_state.rs  source_trace.rs
web_ui/: Cargo.toml  config.ron  config_rtsp.ron
web_ui/src/: app_server.rs  app_state.rs  fuzzing_state.rs  highlight.rs  main.rs  qemu_runner.rs  queue_state.rs  trace_state.rs  websock.rs
web_ui/src/routes/: clients.rs  dashboard.rs  mod.rs  queue.rs  view_src.rs
web_ui/static/: dash.html  gui.txt  queue.html  src.html  src.html.orig
web_ui/static/css/: asm.css  code.css
web_ui/static/js/: asm.js  code.js  file-line-link.js  files.js  filter_branches.js  hexdump.js  inputs.js  line_transitions.js  nav.js  search.js
web_ui/test_data/: test.c  test.i64
web_ui/test_data/dmg2img/: README.Debian  changelog  control  copyright  dmg2img.install  dmg2img.lintian-overrides  dmg2img.manpages  orig-tar.sh  rules  watch
web_ui/test_data/dmg2img/dmg2img-1.6.7/: .dmg2img.c.swp  Makefile  dmg2img  dmg2img.c  vfdecrypt  vfdecrypt.c
web_ui/test_data/dmg2img/out4/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
web_ui/test_data/dmg2img/out4/crashes/: README.txt  id:000000,sig:11,src:000004,op:havoc,rep:128
web_ui/test_data/dmg2img/out4/queue/: id:000001,orig:B  id:000002,src:000001,op:ext_UO,pos:0,+cov  id:000003,src:000001,op:ext_UI,pos:516,+cov  id:000004,src:000002,op:havoc,rep:64,+cov  id:000005,src:000004,op:havoc,rep:64,+cov  id:000006,src:000005,op:havoc,rep:128,+cov  id:000007,src:000006,op:int16,pos:53,val:+0,+cov  id:000008,src:000006,op:int32,pos:52,val:+0,+cov
web_ui/test_data/dmg2img/patches/: dont-strip.patch  series
web_ui/test_data/out_full/: input_a_thread_20559.qemu  input_b_thread_20562.qemu  input_c_thread_20561.qemu  input_d_thread_20560.qemu
