[package]
name = "binary_cfg"
version = "0.1.0"
authors = ["coco <coco@hexgolems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone="0.2.*"
byteorder="1.2.*"
goblin = "0.0.24"
glob = "0.2"
theban_interval_tree = "0.7.1"
memrange = "0.1.3"
snafu= "0.6.0"
syntect="3.3.0"

newtypes = { path = "../newtypes" }
serde = "*"
serde_derive = "*"
