[package]
name = "dump_srcmap"
version = "0.1.0"
authors = ["coco <cornelius@hexgolems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli="0.20.0"
object = "0.18"
memmap = "0.7"
glob = "0.3.0"
newtypes = { path = "../newtypes" }