[package]
name = "qemu_forkserver"
version = "0.1.0"
authors = ["coco <cornelius@hexgolems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.1.0"
nix = "0.15.0"
byteorder = "1.2.*"
timeout-readwrite="0.2.1"
snafu = "0.6.0"


newtypes = { path = "../newtypes" }