[package]
name = "source_info"
version = "0.1.0"
authors = ["coco <coco@hexgolems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
regex = "1"

newtypes = { path = "../newtypes" }
binary_cfg = { path = "../binary_cfg" }
dump_srcmap = { path = "../dump_srcmap" }
